editor-components/slider/slider12/slider12.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss"
  as *;

:root {
  --card-width: 390px;
  --media-w: 390px;
  --media-h: 340px;
}

.container {
  background-color: var(--composer-html-background);

  .upper-container {
    padding: 80px 50px 30px;
    .max-content {
      .header {
        .header-content {
          .title {
            width: 100%;
            margin-bottom: var(--composer-gap-md);
          }

          .description {
            width: 100%;
            color: var(--composer-tertiary-color);
            margin-top: var(--composer-gap-xs);
          }

          .arrows-wrap {
            width: 100%;

            .arrows {
              display: flex;
              gap: var(--composer-gap-sm);
              justify-content: flex-end;

              .prevArrow,
              .nextArrow {
                place-items: center;
                cursor: pointer;
                color: var(--composer-font-color-primary);
                transition: transform 0.15s ease, border-color 0.15s ease;
                width: 4rem;
                height: 4rem;

                &:hover {
                  transform: scale(1.04);
                }
              }
            }
          }
        }
      }
    }
  }
}

.wrap {
  .slider-parent {
    background-color: var(--composer-html-background);

    .slide {
      width: var(--card-width) !important;

      &.wide {
        width: calc(var(--card-width) * 1.5) !important;

        .media {
          width: calc(var(--media-w) * 1.5);
          height: var(--media-h);
        }
      }
    }

    .card {
      display: flex;
      flex-direction: column;
      height: 100%;
      border-radius: var(--composer-border-radius-sm);
    }

    .media {
      width: var(--media-w);
      height: var(--media-h);
      overflow: hidden;
      border-radius: var(--composer-border-radius-sm);
      background: color-mix(
        in srgb,
        var(--composer-html-background),
        black 10%
      );
      display: grid;
      place-items: center;
    }

    .image,
    .video {
      width: 100%;
      height: 100%;
      display: block;
      object-fit: cover;
      object-position: center center;
    }

    .text {
      padding: var(--composer-gap-md);

      .header {
        color: var(--composer-font-color-primary);
      }

      .desc {
        color: var(--composer-tertiary-color);
      }
    }

    .text-centered {
      display: grid;
      justify-items: center;
      text-align: center;

      .header {
        margin-bottom: var(--composer-gap-xs);
      }

      .desc {
        text-align: center !important;
      }
    }
  }
}

.vertical-content {
  > *:last-child {
    margin-bottom: 0px;
    width: 100%;
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .upper-container {
      padding: 80px 40px 20px !important;
      .max-content {
        width: 100% !important;

        .prevArrow,
        .nextArrow {
          width: 3rem !important;
          height: 3rem !important;
        }
      }
    }
  }

  .wrap {
    .slider-parent {
      .header {
        .header-content {
          .title {
            margin-bottom: var(--composer-gap-sm);
          }
        }
      }

      .slide {
        &.wide {
          width: var(--card-width) !important;

          .media {
            width: var(--media-w);
            height: var(--media-h);
          }
        }
      }

      .text {
        margin-top: var(--composer-gap-sm);
      }

      .arrows-wrap {
        margin-bottom: 1rem;
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .upper-container {
      padding: 50px 20px 15px !important;
      .max-content {
        width: 100% !important;

        .prevArrow,
        .nextArrow {
          width: 2.5rem !important;
          height: 2.5rem !important;
        }
      }
    }
  }

  .wrap {
    .slider-parent {
      .slide {
        &.wide {
          width: var(--card-width) !important;

          .media {
            width: var(--media-w);
            height: var(--media-h);
          }
        }
      }
      .text {
        margin-top: var(--composer-gap-sm);
        padding: 0 !important;
      }

      .header {
        margin-bottom: 0 !important;
        padding-bottom: 0 !important;

        .header-content {
          gap: 0 !important;

          .description {
            margin-bottom: 0 !important;
            font-size: var(--composer-font-size-md) !important;
          }
        }
      }

      .arrows-wrap {
        margin-top: 1rem;
      }

      .card {
        padding: 1rem;
      }
    }
  }
}

:global(.slick-track) {
  display: flex !important;
  gap: var(--composer-gap-md);
}

